--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -23,5 +23,5 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: 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
   
