--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           github_user_name: Kleby
           snake_color: 'blue'
-          svg_out_path: dist/github-contribution-grid-snake.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+          svg_out_path: dist/github-contribution-grid-snake-dark.svg?palette=github-dark
            
       #   outputs: |
        #     dist/github-contribution-grid-snake.svg
