--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -16,6 +16,7 @@ jobs:
           # github user name to read the contribution graph from (**required**)
           # using action context var `github.repository_owner` or specified user
           github_user_name: Kleby
+          snake_color: 'blue'
 
           # list of files to generate.
           # one file per line. Each output can be customized with options as query string.
