--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -27,8 +27,8 @@ jobs:
           #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
           #                 Exactly 5 colors are expected.
           outputs: |
-            dist/github-snake.svg?color_snake=#f56f3f
-            dist/github-snake-dark.svg?color_snake=#00ffff&color_dots=#575757,#74cc8f,#44a662,#228240,#065e21
+            dist/github-snake.svg?color_snake
+            dist/github-snake-dark.svg?color_snake=#f56f3f&color_dots=#575757,#74cc8f,#44a662,#228240,#065e21
             dist/ocean.svg?color_snake=orange&color_dots=rgba(191,214,246,0.2),#8dbdff,#64a1f4,#4b91f1,#3c7dd9
             
       - uses: crazy-max/ghaction-github-pages@v2.1.3
